# Auto-Responder

./: .gitignore  .replit  ai_processor.py  database.py  email_ingestor.py  mail_sender.py  main.py  models.py  pyproject.toml  replit.md  scheduler.py
attached_assets/: Pasted--MASTER-PROMPT-AI-SUPPORT-DESK-AUTO-RESPONDER-ROLE-IDEN_1765773295206.txt
static/: style.css
templates/: base.html  dashboard.html  settings.html  test_ticket.html  ticket_detail.html
