[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiosmtplib>=5.0.0",
    "apscheduler>=3.11.1",
    "fastapi>=0.124.4",
    "imapclient>=3.0.1",
    "jinja2>=3.1.6",
    "openai>=2.11.0",
    "psycopg2-binary>=2.9.11",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]
